--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -27,8 +27,8 @@
                 <div class="musica2"><a href="https://www.letras.mus.br/nair-nany/eu-vou-orar-part-monteiro-vilas/" target="_blank">Eu vou orar</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/RZvX-C-q9Qo?si=DF1vewT6MtEt76S9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-                    <!--<div class="musica3"><a href="https://www.cifraclub.com.br/projeto-vida/agnus-dei-pode-morar-aqui-pot-pourri/" target="_blank">Agnus dei + Pode morar aqui</a> <p class="nome">Tom<a href="https://www.cifraclub.com.br/projeto-vida/agnus-dei-pode-morar-aqui-pot-pourri/#key=7" target="_blank" class="tom">E</a></p>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/GThXZkp7Dbk?si=Rzu3fJa82aIodF2H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>-->
+                    <div class="musica3"><a href="https://www.letras.mus.br/fernanda-brum/1153927/" target="_blank">Deus sara esta nação</a> <p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/cGYAUYVsibo?si=w33--UscPvX9Nsa2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
                         
         </div>
