--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -26,8 +26,8 @@
             <div class="musica2"><a href="https://www.letras.mus.br/harpa-crista/1006401/" target="_blank">Renova-me</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/aline-barros/renova-me/" target="_blank" class="tom">D</a></p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/BFi2rqDVNBc?si=BNrYMEdr2dkLNnIR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <!--<div class="musica3"><a href="https://www.letras.mus.br/casa-do-oleiro-adoracao/fazer-morada-part-lukas-agustinho/" target="_blank">Fazer morada</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/casa-do-oleiro-adoracao/fazer-morada/#key=3" target="_blank" class="tom">C</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/woFF1j-0Ieo?si=Plu8bLqF8gQ2rsde" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> -->
+            <div class="musica3"><a href="https://www.letras.mus.br/bruno-sene/eu-me-rendo/" target="_blank">Eu me rendo</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/bruno-sene/eu-me-rendo/#key=3" target="_blank" class="tom">C</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/hvIWVWDqpRw?si=NcR3M1kjyAcNVHK_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
 
         </div>
 
