--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -21,10 +21,10 @@
             
             <div class="menu">
 
-                <div class="musica1"><a href="https://www.letras.mus.br/harpa-crista/451042/" target="_blank">Ho Jesus me ama</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <div class="musica1"><a href="https://www.letras.mus.br/harpa-crista/451042/" target="_blank">Ho Jesus me ama</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/harpa-crista/oh-jesus-me-ama/" target="_blank" class="tom">G</a></p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/tDjflpHSHMc?si=hHQD6u72s-46RggK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-                <div class="musica2"><a href="https://www.letras.mus.br/nair-nany/eu-vou-orar-part-monteiro-vilas/" target="_blank">Eu vou orar</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <div class="musica2"><a href="https://www.letras.mus.br/nair-nany/eu-vou-orar-part-monteiro-vilas/" target="_blank">Eu vou orar</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/nair-nany/eu-vou-orar-part-monteiro-vilas/" target="_blank" class="tom">E</a></p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/RZvX-C-q9Qo?si=DF1vewT6MtEt76S9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
                     <div class="musica3"><a href="https://www.letras.mus.br/fernanda-brum/1153927/" target="_blank">Deus sara esta nação</a> <p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
