--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -21,14 +21,14 @@
             
             <div class="menu">
 
-                <div class="musica1"><a href="https://www.letras.mus.br/harpa-crista/451042/" target="_blank">Ho Jesus me ama</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/harpa-crista/oh-jesus-me-ama/" target="_blank" class="tom">G</a></p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/tDjflpHSHMc?si=hHQD6u72s-46RggK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                <div class="musica1"><a href="https://www.letras.mus.br/marquinhos-goes/732002/" target="_blank">Eu vejo a glória</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Cmsqhr9UrIw?si=UZRHFqYtphG6_7j7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-                <div class="musica2"><a href="https://www.letras.mus.br/nair-nany/eu-vou-orar-part-monteiro-vilas/" target="_blank">Eu vou orar</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/nair-nany/eu-vou-orar-part-monteiro-vilas/" target="_blank" class="tom">E</a></p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/RZvX-C-q9Qo?si=DF1vewT6MtEt76S9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                <div class="musica2"><a href="https://www.letras.mus.br/fernanda-ferro/digno-de-tudo/" target="_blank">Digno de tudo</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/fernanda-ferro/digno-de-tudo/#key=7" target="_blank" class="tom">E</a></p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/mJZG2HnHabw?si=6cLQ0Bb9b8aVUwa7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-                    <div class="musica3"><a href="https://www.letras.mus.br/fernanda-brum/1153927/" target="_blank">Deus sara esta nação</a> <p class="nome">Tom<a href="https://www.cifraclub.com.br/fernanda-brum/deus-sara-esta-nacao/" target="_blank" class="tom">D</a></p>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/cGYAUYVsibo?si=w33--UscPvX9Nsa2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                    <div class="musica3"><a href="https://www.cifraclub.com.br/felipe-rodrigues/tudo-e-perda/letra/" target="_blank">Tudo é perda</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/qxzQR5uwWsk?si=GAd3N2JyvSUnbxNw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
                         
         </div>
