--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -19,15 +19,15 @@
         <div class="container-musicas">
             
             <div class="menu">
-            <div class="musica1"><a href="https://www.letras.mus.br/eyshila/216078/" target="_blank">Chuva de poder</a><p class="nome">Tom<a href="https://www.cifras.com.br/cifra/eyshila/chuva-de-poder#google_vignette" target="_blank" class="tom">E</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/cWovy08GhSY?si=_YcXfw8xQBgs2dwN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="musica1"><a href="https://www.letras.mus.br/luma-elpidio/eu-quebro-o-meu-vaso/" target="_blank">Quebro meu vaso</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3pfN_MyIdrA?si=uZT64JXgZtrxsyFN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
-            <div class="musica2"><a href="https://www.letras.mus.br/aline-barros/1131959/" target="_blank">Sonda-me e usa-me</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/aline-barros/sonda-me-usa-me/simplificada.html" target="_blank" class="tom">C</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/MzLBmGf1fSQ?si=cxXRY7ZEW8pOgOyo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.letras.mus.br/paulo-neto-gospel/tua-presenca/" target="_blank">Tua presença</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HqyJCsJZgOc?si=-P4bI6bC8JRsU50H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica3"><a href="https://www.letras.mus.br/aline-barros/1819226/" target="_blank">Ressucita-me</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/aline-barros/ressuscita-me/simplificada.html#key=3" target="_blank" class="tom">C</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Cx5LrxkHlew?si=rKmpPoPD1Uzcv-nm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
+            <div class="musica3"><a href="https://www.letras.mus.br/alexsander-lucio/o-fogo-ardera/" target="_blank">O fogo arderá</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Bqc6B5LzTN0?si=I2F-8fdQjtAzGj1v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
 
         </div>
 
