--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -21,16 +21,16 @@
             
             <div class="menu">
 
-                <div class="musica1"><a href="https://www.letras.mus.br/alexsander-lucio/o-fogo-ardera/" target="_blank">O fogo arderá sobre o altar</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <div class="musica1"><a href="https://www.letras.mus.br/alexsander-lucio/o-fogo-ardera/" target="_blank">O fogo arderá sobre o altar</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/alexandre-lucio/o-fogo-ardera/" target="_blank" class="tom">Am</a></p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/Bqc6B5LzTN0?si=EjrMK_PDepb359U6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-                <div class="musica2"><a href="https://www.letras.mus.br/theo-rubia/pode-morar-aqui/" target="_blank">Pode morar aqui</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <div class="musica2"><a href="https://www.letras.mus.br/theo-rubia/pode-morar-aqui/" target="_blank">Pode morar aqui</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/jefferson-e-suellen/pode-morar-aqui/" target="_blank" class="tom">E</a></p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/n0fDvJAyrQ8?si=Pz5tV-GYqSzc4ZEr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-                    <div class="musica3"><a href="https://www.letras.mus.br/cancao-nova/169358/" target="_blank">Eu navegarei</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                    <div class="musica3"><a href="https://www.letras.mus.br/cancao-nova/169358/" target="_blank">Eu navegarei</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/gabriela-rocha/eu-navegarei/#key=0" target="_blank" class="tom">Am</a></p>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/nSvxVCdj_gU?si=9L618NOZvReyqgd0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-                        <div class="musica4"><a href="https://www.letras.mus.br/harpa-crista/451086/" target="_blank">Irmãos amados 175 harpa</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                        <div class="musica4"><a href="https://www.letras.mus.br/harpa-crista/451086/" target="_blank">Irmãos amados 175 harpa</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/harpa-crista/irmaos-amados/#key=5" target="_blank" class="tom">D</a></p>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/P70n-Vyouhs?si=OjZrhw5IMnmLd-MI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></iframe>
                         </div>
         
