--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -19,15 +19,14 @@
         <div class="container-musicas">
             
             <div class="menu">
-            <div class="musica1"><a href="https://www.letras.mus.br/luma-elpidio/eu-quebro-o-meu-vaso/" target="_blank">Quebro meu vaso</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/3pfN_MyIdrA?si=uZT64JXgZtrxsyFN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
+            <div class="musica1"><a href="https://www.letras.mus.br/gabriela-rocha/eu-navegarei/" target="_blank">Eu navegarei</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/gabriela-rocha/eu-navegarei/#key=7" target="_blank" class="tom">Em</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/nSvxVCdj_gU?si=PoY3HHlnGxqcRvfK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </div>
 
-            <div class="musica2"><a href="https://www.letras.mus.br/paulo-neto-gospel/tua-presenca/" target="_blank">Tua presença</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/HqyJCsJZgOc?si=-P4bI6bC8JRsU50H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.letras.mus.br/felipe-rodrigues/tudo-e-perda/" target="_blank">Tudo é perda</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/felipe-rodrigues/tudo-e-perda/#capo=0" target="_blank" class="tom">C</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qxzQR5uwWsk?si=Va4FXelSMaR-0wIw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica3"><a href="https://www.letras.mus.br/alexsander-lucio/o-fogo-ardera/" target="_blank">O fogo arderá</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Bqc6B5LzTN0?si=I2F-8fdQjtAzGj1v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
+            <div class="musica3"><a href="https://www.cifraclub.com.br/rapha-cardoso/oceanos-rendido-estou/#key=3" target="_blank">Oceanos + Rendido estou</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/rapha-cardoso/oceanos-rendido-estou/#key=3" target="_blank" class="tom">C</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/L4qAKQEmVTY?si=nhthtjNDC76qm7ZR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
 
         </div>
 
