Atualização de escala e músicas

--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -13,20 +13,20 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (28)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (04)</h1>
 
         </div>
         <div class="container-musicas">
             
             <div class="menu">
-            <div class="musica1"><a href="https://www.letras.mus.br/gabriela-rocha/eu-navegarei/" target="_blank">Eu navegarei</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/gabriela-rocha/eu-navegarei/#key=7" target="_blank" class="tom">Em</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/nSvxVCdj_gU?si=PoY3HHlnGxqcRvfK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </div>
+            <div class="musica1"><a href="https://www.letras.mus.br/felipe-rodrigues/em-teu-nome-part-carol-braga/" target="_blank">Em teu nome</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/r-cBzZzJPSk?si=DwZARlAGRawFI-oU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica2"><a href="https://www.letras.mus.br/felipe-rodrigues/tudo-e-perda/" target="_blank">Tudo é perda</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/felipe-rodrigues/tudo-e-perda/#capo=0" target="_blank" class="tom">C</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/qxzQR5uwWsk?si=Va4FXelSMaR-0wIw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.letras.mus.br/vigilia-dos-asafes/toca-em-mim-de-novo/" target="_blank">Toca em mim de novo</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/isadora-pompeo/toca-em-mim-de-novo/" target="_blank" class="tom">D</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/sLTOlMXjWXA?si=sRm1vnWYC2qspxHb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica3"><a href="https://www.cifraclub.com.br/rapha-cardoso/oceanos-rendido-estou/#key=3" target="_blank">Oceanos + Rendido estou</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/rapha-cardoso/oceanos-rendido-estou/#key=3" target="_blank" class="tom">C</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/L4qAKQEmVTY?si=nhthtjNDC76qm7ZR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
+            <div class="musica3"><a href="https://www.letras.mus.br/aline-barros/1773591/" target="_blank">Rendido estou</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/fernandinho/rendido-estou/" target="_blank" class="tom">D</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BTHvAptZ5qU?si=LkMB-fW37T_lRljZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
 
         </div>
 
