--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -68,7 +68,10 @@
         <div class="Pr-Kelton">
             <h1 class="titulo">Pr Kelton</h1>
             <ul>
-
+                <li>O fogo arderá sobre o altar - Am</li>
+                <li>Pode morar aqui - E</li>
+                <li>Eu navegarei - Am</li>
+                <li>Irmão amados (harpa 175) - D</li>
                 <li>Eu tenho você</li>
                 <li> Portões celestiais</li>
                 <li> Santo pra sempre</li>
@@ -77,25 +80,27 @@
         </div>
         <div class="Jenifer">
             <h1 class="titulo">Jenifer</h1>
-            <ul>
-                <li>Os que esperam - Tom - D</li>
-                <li>Vem Espírito de Deus - Tom - E</li>
-                <li>Sopra Espírito - Tom - E</li>
-                <li>Em Espírito em verdade - Tom - E</li>
-                <li>Estamos de pé - Tom - A</li>
+            <ul><li>Eu navegarei - Em</li>
+                <li>Tudo é perda - C </li>
+                <li>Oceanos + Rendido estou - C</li>
+                <li>Os que esperam - D</li>
+                <li>Vem Espírito de Deus - E</li>
+                <li>Sopra Espírito - E</li>
+                <li>Em Espírito em verdade - E</li>
+                <li>Estamos de pé - A</li>
                 <li>Único - Tom - G</li>
-                <li>Que Ele cresça - Tom - G</li>
-                <li>Ele é exaltado - Tom - G</li>
-                <li>Milagres - Tom - Am</li>
-                <li>Caminho no deserto - Tom - Am</li>
-                <li>Em teu nome - Tom - G</li>
-                <li>Cadeias quebrar - Tom - Em</li>
+                <li>Que Ele cresça - G</li>
+                <li>Ele é exaltado - G</li>
+                <li>Milagres - Am</li>
+                <li>Caminho no deserto - Am</li>
+                <li>Em teu nome - G</li>
+                <li>Cadeias quebrar - Em</li>
                 <li>Clamo Jesus - Tom - E</li>
-                <li>Na unção de Deus + Deus dos deuses + Hino da vitória - Tom - C</li>
-                <li>Pai nosso - Tom - A</li>
-                <li>Quebrantado - Tom - C</li>
-                <li>Gratidão - Tom - D</li>
-                <li>Graças - Tom - Bm</li>
+                <li>Na unção de Deus + Deus dos deuses + Hino da vitória - C</li>
+                <li>Pai nosso - A</li>
+                <li>Quebrantado - C</li>
+                <li>Gratidão - D</li>
+                <li>Graças - Bm</li>
                 <li>Digno de honra - G</li>
                 <li>Eu me rendo - G</li>
                 <li>Aquele que está feliz - G</li>
