--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -113,6 +113,11 @@
                 <li>Hó quaão lindo esse nome é - D</li>
                 <li>Tu és - D</li>
                 <li>Nada mais - D</li>
+                <li>Escape - C</li>
+                <li>Inflama - E</li>
+                <li>Bom perfume + Manancial - D</li>
+                <li>Até que Ele venha + Rendido estou - </li>
+
                
             </ul>
         </div>
