--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -13,20 +13,20 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (11)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (18)</h1>
 
         </div>
         <div class="container-musicas">
             
             <div class="menu">
-            <div class="musica1"><a href="https://www.letras.mus.br/vitohria-sounds/meu-prazer-consagracao-vim-para-adorar-te/" target="_blank">Meu Prazer / Consagração / Vim Para Adorar-Te</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/vitohria-sounds/meu-prazer-consagracao-vim-para-adorar-te/" target="_blank" class="tom">E</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/yUkhwKL3I5o?si=2Kdq_WSyDZxHB7cu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica1"><a href="https://www.letras.mus.br/sulamita-alves/faz-morada/" target="_blank">Faz morada</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/sulamita-alves/faz-morada/#key=4" target="_blank" class="tom">E</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/G1550HIGBqU?si=OHRVt3F-JyAWHjmt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica2"><a href="https://www.letras.mus.br/renascer-praise/escape/" target="_blank">Escape</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/renascer-praise/escape/#key=3" target="_blank" class="tom">C</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/vM2A2XEm9TE?si=PpOau0CYAdoi8mKZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.letras.mus.br/marcos-antonio/721377/" target="_blank">Quase Morri</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fteUQF5PjVs?si=_068F3L66yq_6jGi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica3"><a href="https://www.letras.mus.br/valesca-mayssa/inflama/" target="_blank">Inflama</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/valesca-mayssa/inflama/#capo=0&key=7" target="_blank" class="tom">E</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/qABKrMbu8pA?si=1qjY0OEjOVRuFUpA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
+            <div class="musica3"><a href="https://www.letras.mus.br/elaine-de-jesus/148366/" target="_blank">Quem chora pra Deus</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Eilq1KDBcww?si=3LKnsbvZiXzTK4tT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
 
         </div>
 
