--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -21,13 +21,13 @@
             
             <div class="menu">
 
-                <div class="musica1"><a href="https://www.letras.mus.br/paulo-neto-gospel/tua-presenca/" target="_blank">Tua presença</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/paulo-neto-gospel/tua-presenca/#key=7&capo=0" target="_blank" class="tom">E</a></p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HqyJCsJZgOc?si=Ss7UJyMMGDy-H6I2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                <!--<div class="musica1"><a href="https://www.letras.mus.br/paulo-neto-gospel/tua-presenca/" target="_blank">Tua presença</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/paulo-neto-gospel/tua-presenca/#key=7&capo=0" target="_blank" class="tom">E</a></p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HqyJCsJZgOc?si=Ss7UJyMMGDy-H6I2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>-->
 
-                <div class="musica2"><a href="https://www.letras.mus.br/mara-lima/428927/" target="_blank">O Rei está voltando</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/harpa-crista/o-rei-esta-voltando/#capo=0&key=5" target="_blank" class="tom">D</a></p>
+                <div class="musica2"><a href="https://www.letras.mus.br/mara-lima/428927/" target="_blank">O Rei está voltando</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/harpa-crista/o-rei-esta-voltando/#capo=0&key=7" target="_blank" class="tom">E</a></p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/6F-Hm74soNM?si=5g6F5HlFSc6kwS6M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-                    <div class="musica3"><a href="https://www.letras.mus.br/jefferson-e-suellen/vem-me-buscar/" target="_blank">Vem me buscar</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                    <div class="musica3"><a href="https://www.letras.mus.br/jefferson-e-suellen/vem-me-buscar/" target="_blank">Vem me buscar</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/jefferson-e-suellen/vem-me-buscar/simplificada.html#capo=0&key=6" target="_blank" class="tom">F#</a></p>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/t6Pd8gXIASU?si=PYHahx1MP-v5isJJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
                        <!-- <div class="musica4"><a href="https://www.cifraclub.com.br/marcus-salles/ate-que-ele-venha-rendido-estou-sou-casa-ao-vivo/" target="_blank">Até que Ele venha + Rendido estou</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
