--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -13,13 +13,13 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (18)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (25)</h1>
 
         </div>
         <div class="container-musicas">
             
             <div class="menu">
-            <div class="musica1"><a href="https://www.letras.mus.br/sulamita-alves/faz-morada/" target="_blank">Faz morada</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/sulamita-alves/faz-morada/#key=4" target="_blank" class="tom">E</a></p>
+            <!--<div class="musica1"><a href="https://www.letras.mus.br/sulamita-alves/faz-morada/" target="_blank">Faz morada</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/sulamita-alves/faz-morada/#key=4" target="_blank" class="tom">E</a></p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/G1550HIGBqU?si=OHRVt3F-JyAWHjmt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
             <div class="musica2"><a href="https://www.letras.mus.br/marcos-antonio/721377/" target="_blank">Quase Morri</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
@@ -28,7 +28,7 @@
             <div class="musica3"><a href="https://www.letras.mus.br/elaine-de-jesus/148366/" target="_blank">Quem chora pra Deus</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Eilq1KDBcww?si=3LKnsbvZiXzTK4tT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
 
-        </div>
+        </div>-->
 
     </main>
 
