--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -19,16 +19,16 @@
         <div class="container-musicas">
             
             <div class="menu">
-            <!--<div class="musica1"><a href="https://www.letras.mus.br/sulamita-alves/faz-morada/" target="_blank">Faz morada</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/sulamita-alves/faz-morada/#key=4" target="_blank" class="tom">E</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/G1550HIGBqU?si=OHRVt3F-JyAWHjmt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica1"><a href="https://www.letras.mus.br/luma-elpidio/eu-quebro-o-meu-vaso/" target="_blank">Quebro meu vaso</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3pfN_MyIdrA?si=4r67IwFkQ6hAgHkX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica2"><a href="https://www.letras.mus.br/marcos-antonio/721377/" target="_blank">Quase Morri</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/fteUQF5PjVs?si=_068F3L66yq_6jGi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.letras.mus.br/paulo-neto-gospel/tua-presenca/" target="_blank">Tua presença</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HqyJCsJZgOc?si=Kwwkw93nB0xRemvf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica3"><a href="https://www.letras.mus.br/elaine-de-jesus/148366/" target="_blank">Quem chora pra Deus</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Eilq1KDBcww?si=3LKnsbvZiXzTK4tT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
+            <div class="musica3"><a href="https://www.letras.mus.br/gabriela-rocha/deus-provera/" target="_blank">Deus proverá</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/1i1673ILdVI?si=f26zAGtvPBaCbs0b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
 
-        </div>-->
+        </div>
 
     </main>
 
