--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -13,20 +13,20 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (25)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (02)</h1>
 
         </div>
         <div class="container-musicas">
             
             <div class="menu">
-            <div class="musica1"><a href="https://www.letras.mus.br/luma-elpidio/eu-quebro-o-meu-vaso/" target="_blank">Quebro meu vaso</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/3pfN_MyIdrA?si=4r67IwFkQ6hAgHkX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica1"><a href="https://www.letras.mus.br/isaias-saad/ousado-amor/" target="_blank">Ousado amor</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/isaias-saad/ousado-amor/#capo=0&key=1" target="_blank" class="tom">Bb</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YIW7V4xk-yI?si=KocILFKM3YD26VG5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica2"><a href="https://www.letras.mus.br/paulo-neto-gospel/tua-presenca/" target="_blank">Tua presença</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/HqyJCsJZgOc?si=Kwwkw93nB0xRemvf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.letras.mus.br/gabriela-rocha/creio-que-tu-es-a-cura/" target="_blank">Creio que Tu és a cura</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/gabriela-rocha/creio-que-tu-es-a-cura/#capo=0&key=6" target="_blank" class="tom">D#</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YDfzMI921Gw?si=46PMyTIMulm14hnc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica3"><a href="https://www.letras.mus.br/gabriela-rocha/deus-provera/" target="_blank">Deus proverá</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/1i1673ILdVI?si=f26zAGtvPBaCbs0b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
+            <div class="musica3"><a href="https://www.letras.mus.br/nair-nany/eu-vou-orar-part-monteiro-vilas/" target="_blank">Eu vou orar</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/nair-nany/eu-vou-orar-part-monteiro-vilas/#key=5" target="_blank" class="tom">D</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RZvX-C-q9Qo?si=qnyuZ2HUGlXbDQSz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
 
         </div>
 
