--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -36,6 +36,14 @@
                 <li>Filho do Deus vivo - E</li>
                 <li>Faz chover - G</li>
                 <li>Nada pode calar um adorador - G</li>
+                <li>Vai valer a pena - E</li>
+                <li>Há um lugar - G</li>
+                <li>O que Tua glória fez comigo - E</li>
+                <li>Era eu - G#</li>
+                <li>Ousado amor - Bb</li>
+                <li>Creio que tu és a cura - D#</li>
+                <li>Eu vou orar - D</li>
+            
 
             </ul>
         </div>
