--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -13,20 +13,22 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (02)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (09)<br><br>Aniversário da igreja</h1>
 
         </div>
         <div class="container-musicas">
             
             <div class="menu">
-            <div class="musica1"><a href="https://www.letras.mus.br/isaias-saad/ousado-amor/" target="_blank">Ousado amor</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/isaias-saad/ousado-amor/#capo=0&key=1" target="_blank" class="tom">Bb</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YIW7V4xk-yI?si=KocILFKM3YD26VG5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica1"><a href="https://www.letras.mus.br/soraya-moraes/grande-e-o-meu-deus/" target="_blank">Quão grande é meu Deus</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/-yyyLwnHBzU?si=BRRwXea9iM2PeOl-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica2"><a href="https://www.letras.mus.br/gabriela-rocha/creio-que-tu-es-a-cura/" target="_blank">Creio que Tu és a cura</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/gabriela-rocha/creio-que-tu-es-a-cura/#capo=0&key=6" target="_blank" class="tom">D#</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YDfzMI921Gw?si=46PMyTIMulm14hnc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.cifraclub.com.br/corinhos-evangelicos/ao-nico/#key=10" target="_blank">Ao único + <a href="https://www.cifraclub.com.br/corinhos-evangelicos/deus-esta-aqui/#capo=0&key=10" target="_blank">Deus está aqui</a><p class="nome">Tom<a href="" target="_blank" class="tom">G</a></p><iframe width="560" height="315" src="https://www.youtube.com/embed/60CuZyzGf5U?si=n9vOfdxRf_hDxNJT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bpmPN9fiDcE?si=p03bJWRsEXJUL1jg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-            <div class="musica3"><a href="https://www.letras.mus.br/nair-nany/eu-vou-orar-part-monteiro-vilas/" target="_blank">Eu vou orar</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/nair-nany/eu-vou-orar-part-monteiro-vilas/#key=5" target="_blank" class="tom">D</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/RZvX-C-q9Qo?si=qnyuZ2HUGlXbDQSz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
+               </div>
+
+            <div class="musica3"><a href="https://www.letras.mus.br/adhemar-de-campos/205379/" target="_blank">Ele é exaltado</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/adhemar-de-campos/ele-exaltado/#key=10" target="_blank" class="tom">G</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/22c5Flzd8Iw?si=xE6Ae8WSgbIkYaWm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
 
         </div>
 
