--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <td>Diego</td>
                 </tr>
                 <tr>
-                    <td>Sexta (09)</td>
+                    <td>Sexta (09) <span class="aniversario">Aniversário da igreja</span></td>
                     <td>Jenifer</td>
                     <td>Anny Kétanny Sarah</td>
                     <td>Kétanny</td>
@@ -72,14 +72,25 @@
                     <td>Pr Kelton</td>
                 </tr>
                 <tr>
-                    <td>Domigo (11)</td>
+                    <td>Sábado (10) <span class="aniversario">Aniversário da igreja</span></td>
                     <td>Jenifer</td>
                     <td>Anny Kétanny Sarah</td>
                     <td>Kétanny</td>
-                    <td>-</td>
+                    <td>Diego</td>
                     <td>-</td>
                     <td>Gustavo</td>
                     <td>Pr Kelton</td>
+                </tr>
+
+                <tr>
+                    <td>Domingo (11)<span class="aniversario">Aniversário da igreja</span></td>
+                    <td>Banda convidada</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
                 </tr>
                 
                 <tr>
