troca de múscia

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </tr>
                 
                 <tr>
-                    <td>Domingo (18)</td>
+                    <td>Domingo / Missões (18)</td>
                     <td>Josi</td>
                     <td>Anny Kétanny Jenifer Sarah</td>
                     <td>Kétanny</td>
