--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -22,13 +22,12 @@
             <div class="menu">
 
                <div class="musica1"><a href="https://www.cifraclub.com.br/gabriel-arcanjo/quando-eu-chorar-eu-nao-perdi-o-controle-descansa-pot-pourri/#key=10" target="_blank">Quando eu chorar + Eu não perdi o controle</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/gabriel-arcanjo/quando-eu-chorar-eu-nao-perdi-o-controle-descansa-pot-pourri/#key=10" target="_blank" class="tom">G</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/rVDKEdS1U-4?si=H1lF7Tgul5s49LD4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
+                </div> 
 
                 <div class="musica2"><a href="https://www.letras.mus.br/cancao-louvor/eu-cuido-de-ti/" target="_blank">Eu cuido de ti</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/amanda-wanessa/eu-cuido-de-ti/#key=10" target="_blank" class="tom">G</a></p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Hut9Tx-PFBg?si=Jh9yZ1XWpuSh9ipS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                   </div>
 
-                    <div class="musica3"><a href="https://www.letras.mus.br/harpa-crista/cristo-o-fiel-amigo/" target="_blank">Fiel amigo / Harpa cristã 08</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/harpa-crista/cristo-fiel-amigo/#key=0" target="_blank" class="tom">A</a></p>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/wSwjSHgJdH0?si=-q7LNJI8gHWHdSQ2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                    <div class="musica3"><a href="https://www.letras.mus.br/harpa-crista/cristo-o-fiel-amigo/" target="_blank">Fiel amigo / Harpa cristã 08</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/harpa-crista/cristo-fiel-amigo/#key=0" target="_blank" class="tom">A</a></p></div>
 
                        <!-- <div class="musica4"><a href="https://www.letras.mus.br/gabriel-guedes/nada-mais/" target="_blank">Nada mais</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/gabriel-guedes/nada-mais/#key=5" target="_blank" class="tom">D</a></p>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/N5AMmLZjaaM?si=9-2Fz5Ivv6dURc3k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
