adicionei múscicas de sexta feira

--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -20,18 +20,18 @@
             
             <div class="menu">
 
-           <!-- <div class="musica1"><a href="https://www.letras.mus.br/soraya-moraes/grande-e-o-meu-deus/" target="_blank">Quão grande é meu Deus</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/-yyyLwnHBzU?si=BRRwXea9iM2PeOl-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica1"><a href="https://www.letras.mus.br/thaiane-seghetto/meu-amado/" target="_blank">Meu amado</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/thaiane-seghetto/meu-amado/" target="_blank" class="tom">Bm</a></p>
+               </div>
 
-            <div class="musica2"><a href="https://www.cifraclub.com.br/corinhos-evangelicos/ao-nico/#key=10" target="_blank">Ao único + <a href="https://www.cifraclub.com.br/corinhos-evangelicos/deus-esta-aqui/#capo=0&key=10" target="_blank">Deus está aqui</a><p class="nome">Tom<a href="" target="_blank" class="tom">G</a></p><iframe width="560" height="315" src="https://www.youtube.com/embed/60CuZyzGf5U?si=n9vOfdxRf_hDxNJT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/bpmPN9fiDcE?si=p03bJWRsEXJUL1jg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="musica2"><a href="https://www.letras.mus.br/midian-lima/jo/" target="_blank">Jó</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/midian-lima/jo/" target="_blank" class="tom">G</a></p>
+               
 
                </div>
 
-            <div class="musica3"><a href="https://www.letras.mus.br/adhemar-de-campos/205379/" target="_blank">Ele é exaltado</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/adhemar-de-campos/ele-exaltado/#key=10" target="_blank" class="tom">G</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/22c5Flzd8Iw?si=xE6Ae8WSgbIkYaWm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
+            <div class="musica3"><a href="https://www.letras.mus.br/laura-souguellis/em-teus-bracos/" target="_blank">Em teus braços</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+               </div> 
 
-        </div>-->
+        </div>
 
     </main>
 
